[gd_scene load_steps=7 format=3 uid="uid://72tvg2bmkx3d"]

[ext_resource type="Script" path="res://ui/main/GameSettings/GameSettings.gd" id="1_5jx71"]
[ext_resource type="SystemFont" uid="uid://bqpmvspsbpcmd" path="res://ui/main/SetupTeams/VerdanaFont.tres" id="2_av08f"]
[ext_resource type="StyleBox" uid="uid://yw1cq6b70rm4" path="res://ui/main/SetupTeams/RedButtonStyleNormal.tres" id="3_oaioh"]
[ext_resource type="StyleBox" uid="uid://doy44wiie1lsr" path="res://ui/main/SetupTeams/BlueButtonStyleNormal.tres" id="4_8x7ub"]
[ext_resource type="StyleBox" uid="uid://dqpdujr0336pa" path="res://ui/main/SetupTeams/BlueButtonStyleHover.tres" id="5_w2rdl"]

[sub_resource type="Theme" id="Theme_n44lo"]
default_font = ExtResource("2_av08f")
default_font_size = 25

[node name="GameSettings" type="Node2D"]
script = ExtResource("1_5jx71")

[node name="DoneButton" type="Button" parent="."]
offset_top = 596.0
offset_right = 500.0
offset_bottom = 646.0
theme = SubResource("Theme_n44lo")
theme_override_styles/normal = ExtResource("4_8x7ub")
theme_override_styles/hover = ExtResource("5_w2rdl")
theme_override_styles/pressed = ExtResource("4_8x7ub")
text = "Save
"

[node name="VBoxContainer" type="VBoxContainer" parent="."]
offset_right = 250.0
offset_bottom = 564.0

[node name="GameNameLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_colors/font_placeholder_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_av08f")
theme_override_styles/read_only = ExtResource("3_oaioh")
placeholder_text = "Standard Target Settings"
alignment = 1
editable = false
expand_to_text_length = true

[node name="BackgroundListLineEdit" type="LineEdit" parent="VBoxContainer"]
layout_mode = 2
theme_override_colors/font_uneditable_color = Color(1, 1, 1, 1)
theme_override_fonts/font = ExtResource("2_av08f")
theme_override_styles/read_only = ExtResource("3_oaioh")
text = "Choose Background"
alignment = 1
editable = false
expand_to_text_length = true

[node name="BackgroundItemList" type="ItemList" parent="VBoxContainer"]
custom_minimum_size = Vector2(0, 500)
layout_mode = 2
fixed_icon_size = Vector2i(142, 142)

[connection signal="button_down" from="DoneButton" to="." method="_on_done_button_button_down"]
[connection signal="item_clicked" from="VBoxContainer/BackgroundItemList" to="." method="_on_background_item_list_item_clicked"]
